updated navbar links

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">Portfolio</a>
+            <a class="nav-link" href="#portfolio" target="_blank">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/"
+            <a class="nav-link" href="#skills"
               target="_blank">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Contact</a>
+            <a class="nav-link" href="" target="_blank">Contact</a>
           </li>
         </ul>
 
@@ -99,14 +99,6 @@
   <!-- data-ride="carousel" -->
   <!--Carousel Wrapper-->
   <div id="carousel-example-1z" class="carousel slide carousel-fade">
-
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-    </ol>
-    <!--/Indicators-->
 
     <!--Slides-->
     <div class="carousel-inner" role="listbox">
@@ -139,12 +131,11 @@
             <!-- Content -->
 
           </div>
-          <!-- Mask & flexbox options-->
+
 
         </div>
       </div>
       <!--/First slide-->
-
 
     </div>
 
@@ -153,6 +144,8 @@
   <br>
   <br>
   <!-- Card deck -->
+  <div id="portfolio">
+  </div>
   <div class="card-deck">
 
     <!-- Card -->
@@ -238,7 +231,7 @@
 
   <!--Section: Not enough-->
   <section>
-
+    <div id="skills"></div>
     <h2 class="my-5 h3 text-center">Skills</h2>
 
     <!--First row-->
