--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio" target="_blank">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills"
               target="_blank">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="" target="_blank">Contact</a>
+            <a class="nav-link" href="">Contact</a>
           </li>
         </ul>
 
@@ -167,7 +167,9 @@
         <!--Text-->
         <p class="card-text">Project-1 UCONN Bootcamp.</p>
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-        <button type="button" class="btn btn-light-blue btn-md">View Website</button>
+        <button type="button" class="btn btn-light-blue btn-md">View Website
+          <a href="https://davidlevens.github.io/Project-1/"></a>
+        </button>
         <button type="button" class="btn btn-light-blue btn-md">View Code</button>
       </div>
 
