added links to card

--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills"
-              target="_blank">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
 
@@ -167,10 +166,13 @@
         <!--Text-->
         <p class="card-text">Project-1 UCONN Bootcamp.</p>
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-        <button type="button" class="btn btn-light-blue btn-md">View Website
-          <a href="https://davidlevens.github.io/Project-1/"></a>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://davidlevens.github.io/Project-1/';" target="_blank">View Website
+
         </button>
-        <button type="button" class="btn btn-light-blue btn-md">View Code</button>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://github.com/Davidlevens/Project-1';" target="_blank">View
+          Code</button>
       </div>
 
     </div>
@@ -195,8 +197,11 @@
         <!--Text-->
         <p class="card-text">Select your favorite characters from The Office and display gifs. </p>
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-        <button type="button" class="btn btn-light-blue btn-md">View GifTastic</button>
-        <button type="button" class="btn btn-light-blue btn-md">View Code</button>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://lianadanae.github.io/GifTastic/';" target="_blank">View
+          GifTastic</button>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://github.com/lianadanae/GifTastic';" target="_blank">View Code</button>
       </div>
 
     </div>
@@ -221,8 +226,12 @@
         <!--Text-->
         <p class="card-text">See what train is arriving next. Built with JavaScript, JQuery, moment.js and Firebase</p>
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-        <button type="button" class="btn btn-light-blue btn-md">View Trains</button>
-        <button type="button" class="btn btn-light-blue btn-md">View Code</button>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://lianadanae.github.io/Train-Scheduler/';" target="_blank">View
+          Trains</button>
+        <button type="button" class="btn btn-light-blue btn-md"
+          onclick="window.location.href = 'https://github.com/lianadanae/Train-Scheduler';" target="_blank">View
+          Code</button>
       </div>
 
     </div>
