--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     </div>
   </nav>
   <!-- Navbar -->
+
   <!-- data-ride="carousel" -->
   <!--Carousel Wrapper-->
   <div id="carousel-example-1z" class="carousel slide carousel-fade">
@@ -124,14 +125,10 @@
                 <strong>Full Stack Web Developer</strong>
               </p>
 
-              <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/"
-                class="btn btn-outline-white btn-lg">View my work</a>
+              <a href="#portfolio" class="btn btn-outline-white btn-lg">View my work</a>
             </div>
             <!-- Content -->
-
           </div>
-
-
         </div>
       </div>
       <!--/First slide-->
@@ -145,6 +142,7 @@
   <!-- Card deck -->
   <div id="portfolio">
   </div>
+  <h2 class="my-5 h2-responsive font-weight-bold text-center">Portfolio</h2>
   <div class="card-deck">
 
     <!-- Card -->
@@ -233,17 +231,46 @@
           onclick="window.location.href = 'https://github.com/lianadanae/Train-Scheduler';" target="_blank">View
           Code</button>
       </div>
-
     </div>
     <!-- Card -->
 
+    <!-- Card -->
+    <div class="card mb-4">
+
+        <!--Card image-->
+        <div class="view overlay">
+          <img class="card-img-top" src="./img/primp-playlogo.png" alt="Card image cap">
+          <a href="#!">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+  
+        <!--Card content-->
+        <div class="card-body">
+  
+          <!--Title-->
+          <h4 class="card-title">Primp & Play</h4>
+          <!--Text-->
+          <p class="card-text">Project-2 UCONN Bootcamp.</p>
+          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+          <button type="button" class="btn btn-light-blue btn-md"
+            onclick="window.location.href = 'https://shrouded-spire-86519.herokuapp.com/';" target="_blank">View Website
+  
+          </button>
+          <button type="button" class="btn btn-light-blue btn-md"
+            onclick="window.location.href = 'https://github.com/LysiaStolhofer/Project2';" target="_blank">View
+            Code</button>
+        </div>
+  
+      </div>
+      <!-- Card -->
   </div>
   <!-- Card deck -->
 
-  <!--Section: Not enough-->
+  <!--Section: Skills-->
   <section>
-    <div id="skills"></div>
-    <h2 class="my-5 h3 text-center">Skills</h2>
+    <div id="skills">
+    <h2 class="my-5 h2-responsive font-weight-bold text-center">Skills</h2>
 
     <!--First row-->
     <div class="row features-small mb-5 mt-3 wow fadeIn">
@@ -280,7 +307,7 @@
             <i class="fab fa-css3-alt fa-2x"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">CSS</h6>
+            <h6 class="feature-title">CSS3</h6>
             <div style="height:15px"></div>
           </div>
         </div>
@@ -315,8 +342,7 @@
 
       <!--Second column-->
       <div class="col-md-4 flex-center">
-        <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone"
-          class="z-depth-0 img-fluid">
+        <img src="./img/markus-spiske-cvBBO4PzWPg-unsplash.jpg" alt="Code picture" class="z-depth-0 img-fluid">
       </div>
       <!--/Second column-->
 
@@ -337,11 +363,10 @@
         <!--Second row-->
         <div class="row">
           <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            <i class="fab fa-java"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">Plenty of useful templates</h6>
-            <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
+            <h6 class="feature-title">Java</h6>
             <div style="height:15px"></div>
           </div>
         </div>
@@ -350,12 +375,10 @@
         <!--Third row-->
         <div class="row">
           <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
+            <i class="fab fa-react"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">Easy installation</h6>
-            <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
-            </p>
+            <h6 class="feature-title">React</h6>
             <div style="height:15px"></div>
           </div>
         </div>
@@ -364,13 +387,10 @@
         <!--Fourth row-->
         <div class="row">
           <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
+              <i class="fas fa-database"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">Easy to use and customize</h6>
-            <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep
-              customization. You will
-              easily adjust each component to suit your needs.</p>
+            <h6 class="feature-title">MySQL</h6>
             <div style="height:15px"></div>
           </div>
         </div>
@@ -380,269 +400,105 @@
 
     </div>
     <!--/First row-->
-
+  </div>
   </section>
-  <!--Section: Not enough-->
+  <!--Section: Skills-->
+  <br>
+  <br>
+  <!--Section: Contact-->
+  <section class="mb-4">
 
-  <hr class="mb-5">
-
-  <!--Section: More-->
-  <section>
-
-    <h2 class="my-5 h3 text-center">Skills</h2>
-
-    <!--First row-->
-    <div class="row features-small mt-5 wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fab fa-js"></i>
-          </div>
-          <div class="col-10 mb-2 pl-3">
-            <h5 class="feature-title font-bold mb-1">Javascript</h5>
-            <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers;
-              all browsers love MDB.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-level-up-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-            <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as
-              possible.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-comments fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Active community</h5>
-            <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a part
-              of our family.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
-            <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest
-              features which come along with
-              it.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
+    <!--Section heading-->
+    <div id="contact">
     </div>
-    <!--/First row-->
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact Liana</h2>
+    <!--Section description-->
 
-    <!--Second row-->
-    <div class="row features-small mt-4 wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Modularity</h5>
-            <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use
-              libraries including all features as
-              well as modules for CSS (SASS files) and JS.</p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-question fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Technical support</h5>
-            <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to
-              contact us.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-            <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">SASS files</h5>
-            <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-    </div>
-    <!--/Second row-->
-
-  </section>
-  <!--Section: More-->
-<!--Section: Contact v.2-->
-<section class="mb-4">
-
-  <!--Section heading-->
-  <h2 class="h1-responsive font-weight-bold text-center my-4">Contact Liana</h2>
-  <!--Section description-->
-  <!-- <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-      a matter of hours to help you.</p> -->
-
-  <div class="row">
+    <div class="row">
 
       <!--Grid column-->
       <div class="col-md-9 mb-md-0 mb-5">
-          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-              <!--Grid row-->
-              <div class="row">
+          <!--Grid row-->
+          <div class="row">
 
-                  <!--Grid column-->
-                  <div class="col-md-6">
-                      <div class="md-form mb-0">
-                          <input type="text" id="name" name="name" class="form-control">
-                          <label for="name" class="">Your name</label>
-                      </div>
-                  </div>
-                  <!--Grid column-->
-
-                  <!--Grid column-->
-                  <div class="col-md-6">
-                      <div class="md-form mb-0">
-                          <input type="text" id="email" name="email" class="form-control">
-                          <label for="email" class="">Your email</label>
-                      </div>
-                  </div>
-                  <!--Grid column-->
-
+            <!--Grid column-->
+            <div class="col-md-6">
+              <div class="md-form mb-0">
+                <input type="text" id="name" name="name" class="form-control">
+                <label for="name" class="">Your name</label>
               </div>
-              <!--Grid row-->
+            </div>
+            <!--Grid column-->
 
-              <!--Grid row-->
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="md-form mb-0">
-                          <input type="text" id="subject" name="subject" class="form-control">
-                          <label for="subject" class="">Subject</label>
-                      </div>
-                  </div>
+            <!--Grid column-->
+            <div class="col-md-6">
+              <div class="md-form mb-0">
+                <input type="text" id="email" name="email" class="form-control">
+                <label for="email" class="">Your email</label>
               </div>
-              <!--Grid row-->
+            </div>
+            <!--Grid column-->
 
-              <!--Grid row-->
-              <div class="row">
-
-                  <!--Grid column-->
-                  <div class="col-md-12">
-
-                      <div class="md-form">
-                          <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                          <label for="message">Your message</label>
-                      </div>
-
-                  </div>
-              </div>
-              <!--Grid row-->
-
-          </form>
-
-          <div class="text-center text-md-left">
-              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
           </div>
-          <div class="status"></div>
+          <!--Grid row-->
+
+          <!--Grid row-->
+          <div class="row">
+            <div class="col-md-12">
+              <div class="md-form mb-0">
+                <input type="text" id="subject" name="subject" class="form-control">
+                <label for="subject" class="">Subject</label>
+              </div>
+            </div>
+          </div>
+          <!--Grid row-->
+
+          <!--Grid row-->
+          <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-12">
+
+              <div class="md-form">
+                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                <label for="message">Your message</label>
+              </div>
+
+            </div>
+          </div>
+          <!--Grid row-->
+        </form>
+        <div class="text-center text-md-left">
+          <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+        </div>
+        <div class="status"></div>
       </div>
       <!--Grid column-->
 
       <!--Grid column-->
       <div class="col-md-3 text-center">
-          <ul class="list-unstyled mb-0">
-              <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                  <p>Southbury, CT 06488, USA</p>
-              </li>
+        <ul class="list-unstyled mb-0">
+          <li><i class="fas fa-map-marker-alt fa-2x"></i>
+            <p>Southbury, CT 06488, USA</p>
+          </li>
 
-              <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                  <p> (760) 687-6931</p>
-              </li>
+          <li><i class="fas fa-phone mt-4 fa-2x"></i>
+            <p> (760) 687-6931</p>
+          </li>
 
-              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                  <p>lianabette@gmail.com</p>
-              </li>
-          </ul>
+          <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+            <p>lianabette@gmail.com</p>
+          </li>
+        </ul>
       </div>
       <!--Grid column-->
 
-  </div>
+    </div>
 
-</section>
-<!--Section: Contact v.2-->
+  </section>
+  <!--Section: Contact v.2-->
   </div>
 
   </main>
@@ -653,13 +509,14 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      
-      <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank"
-        role="button">View Resume
+
+      <a class="btn btn-outline-white"
+        href="https://docs.google.com/document/d/1qCL8j67PZtj4EqZ0t5OgQAeao8HdfGlPNR7dBJxAJbM/edit?usp=sharing"
+        target="_blank" role="button">View Resume
         <i class="far fa-file fa-2x"></i>
       </a>
       <br>
-    </div> 
+    </div>
     <!--/.Call to action-->
 
     <hr class="my-4">
