--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 </head>
 
 <body>
-
   <!-- Navbar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
     <div class="container">
@@ -89,9 +88,7 @@
             </a>
           </li>
         </ul>
-
       </div>
-
     </div>
   </nav>
   <!-- Navbar -->
@@ -120,11 +117,9 @@
               <h1 class="mb-4">
                 <strong>Liana Bette</strong>
               </h1>
-
               <p>
                 <strong>Full Stack Web Developer</strong>
               </p>
-
               <a href="#portfolio" class="btn btn-outline-white btn-lg">View my work</a>
             </div>
             <!-- Content -->
@@ -132,9 +127,7 @@
         </div>
       </div>
       <!--/First slide-->
-
     </div>
-
   </div>
   <!--/.Carousel Wrapper-->
   <br>
@@ -166,7 +159,6 @@
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
         <button type="button" class="btn btn-light-blue btn-md"
           onclick="window.location.href = 'https://davidlevens.github.io/Project-1/';" target="_blank">View Website
-
         </button>
         <button type="button" class="btn btn-light-blue btn-md"
           onclick="window.location.href = 'https://github.com/Davidlevens/Project-1';" target="_blank">View
@@ -210,7 +202,7 @@
 
       <!--Card image-->
       <div class="view overlay">
-        <img class="card-img-top" src="./img/luca-bravo-fPoSK5XeyHw-unsplash.jpg"" alt=" Card image cap">
+        <img class="card-img-top" src="./img/ralogo.png"" alt=" Card image cap">
         <a href="#!">
           <div class="mask rgba-white-slight"></div>
         </a>
@@ -220,15 +212,15 @@
       <div class="card-body">
 
         <!--Title-->
-        <h4 class="card-title">Train Scheduler</h4>
+        <h4 class="card-title">Realtor Assist</h4>
         <!--Text-->
-        <p class="card-text">See what train is arriving next. Built with JavaScript, JQuery, moment.js and Firebase</p>
+        <p class="card-text">Helping Real Estate assistants organize the office. Built with MongoDB, Express, Node and React</p>
         <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
         <button type="button" class="btn btn-light-blue btn-md"
-          onclick="window.location.href = 'https://lianadanae.github.io/Train-Scheduler/';" target="_blank">View
-          Trains</button>
+          onclick="window.location.href = 'https:https://realtor-assist.herokuapp.com/';" target="_blank">View
+          Website</button>
         <button type="button" class="btn btn-light-blue btn-md"
-          onclick="window.location.href = 'https://github.com/lianadanae/Train-Scheduler';" target="_blank">View
+          onclick="window.location.href = 'https://github.com/lianadanae/Realtor-Assist';" target="_blank">View
           Code</button>
       </div>
     </div>
@@ -489,12 +481,11 @@
           </li>
 
           <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-            <p>lianabette@gmail.com</p>
+            <a href="mailto:>lianabette@gmail.com">lianabette@gmail.com</a>
           </li>
         </ul>
       </div>
       <!--Grid column-->
-
     </div>
 
   </section>
@@ -530,7 +521,6 @@
       <a href="https://github.com/lianadanae" target="_blank">
         <i class="fab fa-github fa-3x mr-3"></i>
       </a>
-
     </div>
     <!-- Social icons -->
 
